# serial-hid-kvm

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: release.yml
src/serial_hid_kvm/: __init__.py  _audio.py  _preview_viewer.py  _web_viewer.py  capture.py  client.py  config.py  hid_keyboard.py  hid_keycodes.py  hid_layouts.py  hid_mouse.py  hid_protocol.py  serial_detect.py  server.py
src/serial_hid_kvm/layouts/: CREATING_LAYOUTS.md
tests/: test_hid_keyboard.py  test_hid_keycodes.py  test_hid_protocol.py  test_web_viewer_keycodes.py
